--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Tidy Project Achilles Data"
-author: "Joshua H Cook"
 output: github_document
 ---
+
+<!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r setup, include = FALSE}
 library(knitr)
@@ -10,13 +10,17 @@ library(kableExtra)
 knitr::opts_chunk$set(comment = "#>")
 ```
 
-```{r load_libs}
-library(tidyverse)
-```
+# "Tidy Project Achilles Data"
+
+**author: Joshua H Cook**
 
 **last updated: March 15, 2019**
 
 This is "tidy" data from the Broad's [Project Achilles](https://depmap.org/portal/achilles/) with a focus of the various *RAS* alleles. The data files are in the "data" directory and exaplined below.
+
+```{r load_libs, message = FALSE, warning = FALSE}
+library(tidyverse)
+```
 
 To download this repository,
 
@@ -57,11 +61,11 @@ cell_line_metadata <- readRDS(file.path("data", "cell_line_metadata.tib"))
 head(cell_line_metadata)
 ```
 
-```{r kable_celllinemeta}
+```{r kable_celllinemeta, echo = FALSE}
 cell_line_metadata %>%
-	slice(1:100) %>%
-	kable() %>%
-	scroll_box(width = "100%", height = "300px")
+    slice(1:10) %>%
+    kable() %>%
+    scroll_box(width = "100%", height = "300px")
 ```
 
 1. **DepMap_ID** - ID for Dependancy Map project
@@ -75,6 +79,8 @@ cell_line_metadata %>%
 9. **Source** - source of the cell line
 
 ### cell_line_ras_anno.tib
+
+
 
 ### ras_muts_annotated.tib
 
