--- a/README.Rmd
+++ b/README.Rmd
@@ -76,8 +76,9 @@ head(cell_line_metadata)
 
 ```{r kable_celllinemeta, echo = FALSE}
 cell_line_metadata %>%
-    slice(1:10) %>%
+    slice(1:5) %>%
     kable() %>%
+    kable_styling(bootstrap_options = c("striped", "hover", "condensed")) %>%
     scroll_box(width = "100%", height = "300px")
 ```
 
