--- a/README.Rmd
+++ b/README.Rmd
@@ -241,7 +241,7 @@ Edge attributes:
 8. **Primary_Disease** - general disease of the cell line
 9. **Subtype_Disease** - more specific disease of the cell line
 
-Here is an example of the colorectal cancer cell lines with *KRAS* mutations in the hotspot codons, only showing edges for scores greater than 1 (red) or less than -1 (blue).
+Here is an example of the colorectal cancer cell lines with *KRAS* mutations in the hotspot codons, only showing edges for scores greater than 1 (red) or less than -1 (blue). If there were multiple scores for a target-*RAS* allele, the median value was used.
 
 ![dependency_map](images/dependency_graph_nicely.png)
 
