--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,8 @@ output: github_document
 library(knitr)
 knitr::opts_chunk$set(comment = "#>",
                       collapse = TRUE,
-                      echo = TRUE)
+                      echo = TRUE,
+                      cache = TRUE)
 ```
 
 # Tidy Project Achilles Data
@@ -28,13 +29,13 @@ git clone https://github.com/jhrcook/tidy_Achilles.git
 ## Data Source
 
 All data was downloaded from the [Broad's DepMap data repository](https://depmap.org/portal/download/all/).\
-web address: https://depmap.org/portal/download/all/
+**web address:** https://depmap.org/portal/download/all/
 
 You can also query genes, cell lines, lineages, etc. from their [website](https://depmap.org/portal/)\
-web address: https://depmap.org/portal/
+**web address:** https://depmap.org/portal/
 
 The cell line information was obtained from the [Cancer Cell Line Encyclopedia](https://portals.broadinstitute.org/ccle) - their query portal is really useful, too. More data on the cell lines can be downloaded from their website. If you have an requests for data to add to this repo, please open a GitHub [issue](https://github.com/jhrcook/tidy_Achilles/issues).\
-web address: https://portals.broadinstitute.org/ccle
+**web address:** https://portals.broadinstitute.org/ccle
 
 ---
 
@@ -197,7 +198,7 @@ Here is a chart to breakdown the number of cell lines for each *RAS* alleles acr
 ![ras_cell_lines](images/ras_alleles_per_tissue.png)
 
 
-### rnai\_synthetic\_lethal/
+### rnai\_synthetic\_lethal (directory)
 
 I had to split up the RNAi synthetic lethal data by tissue so that each data file was small enough to push to GitHub. These are stored in "data/rnai\_synthetic\_lethal/". All or a selection of them can be loaded using `load_rnai_synthetic_lethal`, shown below. It returns a single tibble of the desired tissues' data. The column `score` holds the lethality score that DepMap calculated.
 
@@ -253,7 +254,7 @@ readRDS(file.path("data", "gene_essentiality.tib"))
 ```
 
 
-### copy\_number/
+### copy\_number (directory)
 
 The full tibble was too large to push to GitHub (and probably to warrant loading every time), so I separated it by primary disease and stored each as a tibble in "data/copy_number". Again, I supply a function below to retrieve each one or all (default) tissues.
 
@@ -299,6 +300,18 @@ Here is an example of the colorectal cancer cell lines with *KRAS* mutations in 
 Below are the dependency values each *RAS* allele on the corresponding *RAS* gene.
 
 ![ras_dependency](images/ras_dependence.png)
+
+---
+
+## Comparing RNAi vs. CRISPR screens
+
+Below is a plot of all the data points where both RNAi and CRISPR screen scores are available for a cell line and gene.
+
+![all_points](images/diff_RNAi_CRISPR_individual.png)
+
+Below is a plot of all the data points where both RNAi and CRISPR screen scores are available for a disease and gene, with each score being average across the cell lines.
+
+![disease_avg](images/diff_RNAi_CRISPR_avg.png)
 
 ---
 
